test/invalid-syntax/57163_no_type_declaration/no_type_declaration.mag
-- Author: 57163, Guilherme Dias

fun main (_) : Unit -> Unit = 
	var telm = 10;
	print (telm)
